--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
     <div class="card">
         <div class="search">
             <input type="text place" placeholder="Enter city name">
-            <button id="btnClck">
-                <img src="/images/search-interface-symbol.png">
-            </button>
+            <button id="btnClick">Enter</button>
+        </div>
+        <div class="weather">
+            <img src="/images/clear.png" class="weather-icon">
+            <h1 class="temp">70</h1>
+            <h2 class="city">Lexington</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="/images/humidity.png" alt="humidity">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="/images/wind.png" alt="wind">
+                    <div>
+                        <p class="wind">25mph</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
