--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
 
     <div class="card">
         <div class="search">
-            <input type="text place" placeholder="Enter city name">
+            <input type="text place" id="zipCode" placeholder="Enter zip code">
             <button id="btnClick">Enter</button>
         </div>
         <div class="weather">
-            <img src="/images/clear.png" class="weather-icon">
-            <h1 class="temp">70</h1>
-            <h2 class="city">Lexington</h2>
+            <img src="" id="imageImg" alt="">
+            <h1 id="temp"></h1>
+            <h2 id="city"></h2>
             <div class="details">
                 <div class="col">
-                    <img src="/images/humidity.png" alt="humidity">
+                    <img id="humidityImg" src="" alt="">
                     <div>
-                        <p class="humidity">50%</p>
                         <p>Humidity</p>
+                        <p id="humidity"></p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/images/wind.png" alt="wind">
+                    <img id="windImg" src="" alt="">
                     <div>
-                        <p class="wind">25mph</p>
                         <p>Wind Speed</p>
+                        <p id="wind"></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script defer src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src='main.js'></script>
 </body>
 
 </html>
